--- a/css/index.css
+++ b/css/index.css
@@ -108,7 +108,7 @@ html, body{
   position: absolute;
   width: 30em;
   height: 30em;
-  background-image: url('../assets/Controller.png');
+  background-image: url('../assets/GameC.png');
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
