--- a/css/confirmatie.css
+++ b/css/confirmatie.css
@@ -240,7 +240,7 @@
   font-size: 0.9em;
 }
 
-.betalenWrap .volgendeBtn{
+.volgendeBtn{
   border: 0.2em solid #222;
   padding: 0.5em 1em;
   font-size: 1em;
@@ -252,7 +252,7 @@
 }
 
 
-.betalenWrap .volgendeBtn:hover{
+.volgendeBtn:hover{
   cursor: pointer;
   transform: skewX(-15deg) scale(1.1);
 }
@@ -349,4 +349,25 @@ form .contactInfo{
 
 form .betalingsMethode{
   margin-top: 4em;
+}
+
+.geslaagdWrap{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+
+}
+
+.geslaagdWrap svg{
+  width: 10em;
+  height: 10em;
+  fill: #003791;
+  margin-bottom: 1em;
+}
+
+.geslaagdWrap button{
+  margin-top: 2em;
 }
