--- a/css/selecteerSpel.css
+++ b/css/selecteerSpel.css
@@ -10,7 +10,7 @@
     height: 100%;
     background: #222;
   }
-  
+
   .cutomizeVoortgangWrap{
     position: absolute;
     top: 1em;
@@ -21,7 +21,7 @@
     height: auto;
     z-index: 3;
   }
-  
+
   .voortgangSlider{
     position: absolute;
     width: 45vw;
@@ -31,7 +31,7 @@
     display: flex;
     justify-content: flex-start;
   }
-  
+
   .voortgangInnerSlider{
     width: 0%;
     height: 100%;
@@ -39,7 +39,7 @@
     animation: silderFade 1s ease forwards;
     animation-delay: 2.5s;
   }
-  
+
   @keyframes silderFade {
     0%{
       width: 66.66%;
@@ -48,7 +48,7 @@
       width: 100%;
     }
   }
-  
+
   .voortgangItems{
     z-index: 1;
     width: 45vw;
@@ -56,7 +56,7 @@
     justify-content: space-between;
     flex-direction: row;
   }
-  
+
   .voortgangItemWrap{
     width: 4em;
     height: 4em;
@@ -64,9 +64,9 @@
     padding: 0.5em;
     border-radius: 100%;
     background: #fff;
-  
+
   }
-  
+
   .voortgangItem{
     display: flex;
     justify-content: center;
@@ -76,46 +76,46 @@
     border-radius: 100%;
     background: #eee;
   }
-  
+
   #voortgangItem1{
     background: #003791;
   }
-  
+
   #voortgangItem2{
     background: #003791;
   }
-  
+
   #voortgangItem3{
     background: #003791;
   }
-  
+
   .voortgangItem::after{
     content: "";
     font-size: 1.5em;
     font-weight: bolder;
     color: #fff;
   }
-  
+
   #voortgangItem1::after{
     content: "1";
-  
+
   }
-  
+
   #voortgangItem2::after{
     content: "2";
-  
+
   }
-  
+
   #voortgangItem3::after{
     content: "3";
-  
+
   }
-  
+
   #voortgangItem4::after{
     content: "4";
-  
+
   }
-  
+
   .volgendeBtn{
     position: absolute;
     margin-top: 2em;
@@ -130,13 +130,13 @@
     right: 2em;
     transition: 0.2s ease;
   }
-  
-  
+
+
   .volgendeBtn:hover{
     cursor: pointer;
     transform: skewX(-15deg) scale(1.1);
   }
-  
+
   .stapTerugWrap{
     position: fixed;
     top: 2em;
@@ -147,14 +147,14 @@
     z-index: 7;
     cursor: pointer;
   }
-  
+
   .stapTerugWrap svg{
     width: 1.5em;
     height: 1.5em;
     transform: rotate(90deg);
     fill: #222;
   }
-  
+
   .stapTerugWrap button{
     border: none;
     padding: 0.5em 1em;
@@ -166,11 +166,11 @@
     transition: 0.2s ease;
     cursor: pointer;
   }
-  
+
 .stapTerugWrap:hover button{
     margin-left: 0.5em;
     transition: 0.2s ease;
-  
+
 }
 
 .gamesContainer {
@@ -181,19 +181,31 @@
 }
 
 .gameSlider {
-    padding-top: 6em;
+  padding-top: 6em;
+  box-sizing: border-box;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.gameSlider p {
+.gameSlider h3{
+  position: fixed;
+  top: 6em;
+  text-align: center;
+}
+
+.gameSlider p{
     text-align: center;
     padding: 15px;
-    font-size: 21px;
+    font-size: 0.9em;
 }
 
 .gameInfo p{
     text-align: center;
     padding: 0px;
-    font-size: 18px;
+    font-size: 0.9em;
 }
 
 #gameTitle {
@@ -201,12 +213,12 @@
 }
 
 #gameStudio {
-    font-size: 14px;
+    font-size: 0.9em;
 }
 
 #meerInfo {
     margin-top: 15px;
-    font-size: 12px;
+    font-size: 0.8em;
 }
 
 #games {
@@ -231,6 +243,7 @@
     border: none;
     background: #222;
     color: #fff;
+    cursor: pointer;
 }
 
 .sliderSvg {
@@ -281,16 +294,18 @@ p {
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
   }
-  
+
   /* Modal Content/Box */
   .modal-content {
     background-color: #fefefe;
     margin: 60px auto; /* 15% from the top and centered */
-    padding: 20px;
-    border-radius: 3px;
-    width: 60%; /* Could be more or less, depending on screen size */
+    padding: 2em;
+    border-radius: 0.25em;
+    width: 60%;
+    box-sizing: border-box;
+    /* Could be more or less, depending on screen size */
   }
-  
+
   .modal-content p {
     text-align: left;
     padding: 10px 0px;
@@ -299,10 +314,10 @@ p {
   #close {
     color: #aaa;
     float: right;
-    width: 24px;
-    height: 24px;
+    width: 1.5em;
+    height: 1.5em;
   }
-  
+
   #close:hover,
   #close:focus {
     color: black;
@@ -317,7 +332,7 @@ p {
 #game_screen {
     width: 50%;
     height: auto;
-    border-radius: 15px;
+    border-radius: 0.25em;
     display: block;
     margin: 20px auto;
 }
